Create link for SchedulesForClasses.html

--- a/MyProject/web/SchedulesForClasses.html
+++ b/MyProject/web/SchedulesForClasses.html
@@ -13,7 +13,7 @@
 
     <body>
         <div class="container ">
-            <form>
+            <form action="schedules" method="Get">
                 <div class="campus text-center">
                     Campus:
                     <select name="campus" id="campus">
