--- a/MyProject/web/GroupedByDepartment.html
+++ b/MyProject/web/GroupedByDepartment.html
@@ -20,7 +20,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
             <div class="col-md-12">
                 <form action="groups" method="Get" >
                     <table>
-                        <caption>Select a course, then a group ...</caption>
+                        <h2>Select a course, then a group ...</h2>
                         <thead>
                             <tr>
                                 <th>Campus</th>
@@ -307,7 +307,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                 </form>
 
                 <table>
-                    <caption>... then see student list (<a href="">Export data</a>)</caption>
+                    <h2>... then see student list (<a href="">Export data</a>)</h2>
                     <thead>
                         <tr>
                             <th>Index</th>
@@ -323,7 +323,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                         <tr>
                             <td>1</td>
                             <td>
-                    <center><img alt="HA160120" src="./img/avatarNoName.jpg"
+                    <center><img alt="HA160120" src="assets/img/avatarNoName.jpg"
                                  style="height:146px;width:111px;border-width:0px;"></center>
                     </td>
                     <td><a href="">GiangPHHA160120 <br> View grade</a>
@@ -336,7 +336,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                     <tr>
                         <td>2</td>
                         <td>
-                    <center><img alt="HE151180" src="./img/avatarNoName.jpg"
+                    <center><img alt="HE151180" src="assets/img/avatarNoName.jpg"
                                  style="height:146px;width:111px;border-width:0px;"></center>
                     </td>
                     <td><a href="">HieuNMHE151180 <br> View grade</a>
@@ -348,7 +348,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                     <tr>
                         <td>3</td>
                         <td>
-                    <center><img alt="HE151260" src="./img/avatarNoName.jpg"
+                    <center><img alt="HE151260" src="assets/img/avatarNoName.jpg"
                                  style="height:146px;width:111px;border-width:0px;"></center>
                     </td>
                     <td><a href="">ThaoNTHE151260 <br> View grade</a>
@@ -361,7 +361,5 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                 </table>
             </div>
         </div>
-
     </body>
-
 </html>
