--- a/MyProject/web/SchedulesForClasses.html
+++ b/MyProject/web/SchedulesForClasses.html
@@ -125,21 +125,21 @@
                         <td>Slot 1 </td>
                         <td>
                             <p><a href="">IOT1702<br>-PRF192 <br>at BE-301</a><br>
-                                <a href="">(<font color="green">Attended</font>)</a>
+                                <a href="record">(<font color="green">Attended</font>)</a>
                                 <a class="btn btn-info btn-sm" href="">EduNext</a>
                             </p>
                         </td>
                         <td>-</td>
                         <td>
                             <p><a href="">IOT1702<br>-PRF192 <br>at BE-301</a><br>
-                                <a href="">(<font color="green">Attended</font>)</a>
+                                <a href="record">(<font color="green">Attended</font>)</a>
                                 <a class="btn btn-info btn-sm" href="">EduNext</a>
                             </p>
                         </td>
                         <td>-</td>
                         <td>
                             <p><a href="">IOT1702<br>-PRF192 <br>at BE-301</a><br>
-                                <a href="">
+                                <a href="record">
                                     (<font color="red">Not yet</font>)
                                 </a>
                                 <a class="btn btn-info btn-sm" href="">EduNext</a>
@@ -152,14 +152,14 @@
                     <tr>
                         <td>Slot 2 </td>
                         <td>
-                            <p><a href="">AI1604<br>-DBI201 <br>at BE-315</a><br>
+                            <p><a href="groups">AI1604<br>-DBI201 <br>at BE-315</a><br>
                                 <a href="">(<font color="green">Attended</font>)</a>
                                 <a class="btn btn-info btn-sm" href="">EduNext</a>
                             </p>
                         </td>
                         <td>-</td>
                         <td>
-                            <p><a href="">AI1604<br>-DBI201 <br>at BE-315</a><br>
+                            <p><a href="groups">AI1604<br>-DBI201 <br>at BE-315</a><br>
                                 <a href="">
                                     (<font color="red">Not yet</font>)
                                 </a>
@@ -177,7 +177,7 @@
                             </p>
                         </td>
                         <td>
-                            <p><a href="">AI1604<br>-DBI201 <br>at BE-315</a><br>
+                            <p><a href="groups">AI1604<br>-DBI201 <br>at BE-315</a><br>
                                 <a href="">
                                     (<font color="red">Not yet</font>)
                                 </a>
