--- a/MyProject/web/RecordAttendence.html
+++ b/MyProject/web/RecordAttendence.html
@@ -12,210 +12,214 @@
     </head>
 
     <body>
-        <form action="record" method="GET">
-            <table>
-                <h2>Single activity Attendance</h2>
-                <p>Attendance for <strong>PRJ192</strong> will leacturer <strong>SonNT5</strong> at slot 1 on Wednesday
-                    19/01/2022, Spring2022, in room BE-301 at FU-HL</p>
-                <thead>
-                    <tr>
-                        <th>No</th>
-                        <th>Group</th>
-                        <th>Code</th>
-                        <th>Name</th>
-                        <th>Image</th>
-                        <th>Status</th>
-                        <th>Comment</th>
-                        <th>Taker</th>
-                        <th>Record time</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>
-                            <font color="blue">IOT1702</font>
+        <div class="container">
+            <div class="col-md-12">
+                <form action="record" method="GET">
+                    <table>
+                        <h2>Single activity Attendance</h2>
+                        <p>Attendance for <strong>PRJ192</strong> will leacturer <strong>SonNT5</strong> at slot 1 on Wednesday
+                            19/01/2022, Spring2022, in room BE-301 at FU-HL</p>
+                        <thead>
+                            <tr>
+                                <th>No</th>
+                                <th>Group</th>
+                                <th>Code</th>
+                                <th>Name</th>
+                                <th>Image</th>
+                                <th>Status</th>
+                                <th>Comment</th>
+                                <th>Taker</th>
+                                <th>Record time</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>
+                                    <font color="blue">IOT1702</font>
+                                </td>
+                                <td>
+                                    <font color="#33CCFF">HE130431</font>
+                                </td>
+                                <td>
+                                    <font color="blue">Đỗ Mạnh Hưng</font>
+                                </td>
+                                <td>
+                        <center>
+                            <img alt="HE130431" src="assets/img/avatarNoName.jpg"
+                                 style="height:146px;width:111px;border-width:0px;">
+                        </center>
                         </td>
                         <td>
-                            <font color="#33CCFF">HE130431</font>
+                            <font color="red">Absent</font>
+                        </td>
+                        <td></td>
+                        <td>
+                            <font color="#33CCFF">sonnt5</font>
+                        </td>
+                        <td>1/19/2022 8:54:00 AM</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>
+                                <font color="blue">IOT1702</font>
+                            </td>
+                            <td>
+                                <font color="#33CCFF">HE141602</font>
+                            </td>
+                            <td>
+                                <font color="blue">Nguyễn Việt Hoàng</font>
+                            </td>
+                            <td>
+                        <center>
+                            <img alt="HE141602" src="assets/img/avatarNoName.jpg"
+                                 style="height:146px;width:111px;border-width:0px;">
+                        </center>
                         </td>
                         <td>
-                            <font color="blue">Đỗ Mạnh Hưng</font>
+                            <font color="green">Present</font>
+                        </td>
+                        <td></td>
+                        <td>
+                            <font color="#33CCFF">sonnt5</font>
+                        </td>
+                        <td>1/19/2022 8:54:00 AM</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>
+                                <font color="blue">IOT1702</font>
+                            </td>
+                            <td>
+                                <font color="#33CCFF">HE150671</font>
+                            </td>
+                            <td>
+                                <font color="blue">Hoàng Văn Tấn</font>
+                            </td>
+                            <td>
+                        <center>
+                            <img alt="HE150671" src="assets/img/avatarNoName.jpg"
+                                 style="height:146px;width:111px;border-width:0px;">
+                        </center>
                         </td>
                         <td>
-                <center>
-                    <img alt="HE130431" src="assets/img/avatarNoName.jpg"
-                         style="height:146px;width:111px;border-width:0px;">
-                </center>
-                </td>
-                <td>
-                    <font color="red">Absent</font>
-                </td>
-                <td></td>
-                <td>
-                    <font color="#33CCFF">sonnt5</font>
-                </td>
-                <td>1/19/2022 8:54:00 AM</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>
-                        <font color="blue">IOT1702</font>
-                    </td>
-                    <td>
-                        <font color="#33CCFF">HE141602</font>
-                    </td>
-                    <td>
-                        <font color="blue">Nguyễn Việt Hoàng</font>
-                    </td>
-                    <td>
-                <center>
-                    <img alt="HE141602" src="assets/img/avatarNoName.jpg"
-                         style="height:146px;width:111px;border-width:0px;">
-                </center>
-                </td>
-                <td>
-                    <font color="green">Present</font>
-                </td>
-                <td></td>
-                <td>
-                    <font color="#33CCFF">sonnt5</font>
-                </td>
-                <td>1/19/2022 8:54:00 AM</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>
-                        <font color="blue">IOT1702</font>
-                    </td>
-                    <td>
-                        <font color="#33CCFF">HE150671</font>
-                    </td>
-                    <td>
-                        <font color="blue">Hoàng Văn Tấn</font>
-                    </td>
-                    <td>
-                <center>
-                    <img alt="HE150671" src="assets/img/avatarNoName.jpg"
-                         style="height:146px;width:111px;border-width:0px;">
-                </center>
-                </td>
-                <td>
-                    <font color="green">Present</font>
-                </td>
-                <td></td>
-                <td>
-                    <font color="#33CCFF">sonnt5</font>
-                </td>
-                <td>1/19/2022 8:54:00 AM</td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>
-                        <font color="blue">IOT1702</font>
-                    </td>
-                    <td>
-                        <font color="#33CCFF">HE160258</font>
-                    </td>
-                    <td>
-                        <font color="blue">Phan Kiến Quốc</font>
-                    </td>
-                    <td>
-                <center>
-                    <img alt="HE160258" src="assets/img/avatarNoName.jpg"
-                         style="height:146px;width:111px;border-width:0px;">
-                </center>
-                </td>
-                <td>
-                    <font color="green">Present</font>
-                </td>
-                <td></td>
-                <td>
-                    <font color="#33CCFF">sonnt5</font>
-                </td>
-                <td>1/19/2022 8:54:00 AM</td>
-                </tr>
-                <tr>
-                    <td>5</td>
-                    <td>
-                        <font color="blue">IOT1702</font>
-                    </td>
-                    <td>
-                        <font color="#33CCFF">HE160408</font>
-                    </td>
-                    <td>
-                        <font color="blue">Vũ Minh Quang</font>
-                    </td>
-                    <td>
-                <center>
-                    <img alt="HE160408" src="assets/img/avatarNoName.jpg"
-                         style="height:146px;width:111px;border-width:0px;">
-                </center>
-                </td>
-                <td>
-                    <font color="green">Present</font>
-                </td>
-                <td></td>
-                <td>
-                    <font color="#33CCFF">sonnt5</font>
-                </td>
-                <td>1/19/2022 8:54:00 AM</td>
-                </tr>
-                <tr>
-                    <td>6</td>
-                    <td>
-                        <font color="blue">IOT1702</font>
-                    </td>
-                    <td>
-                        <font color="#33CCFF">HE160633</font>
-                    </td>
-                    <td>
-                        <font color="blue">Ngô Dương Ngọc</font>
-                    </td>
-                    <td>
-                <center>
-                    <img alt="HE160633" src="assets/img/avatarNoName.jpg"
-                         style="height:146px;width:111px;border-width:0px;">
-                </center>
-                </td>
-                <td>
-                    <font color="red">Absent</font>
-                </td>
-                <td></td>
-                <td>
-                    <font color="#33CCFF">sonnt5</font>
-                </td>
-                <td>1/19/2022 8:54:00 AM</td>
-                </tr>
-                <tr>
-                    <td>7</td>
-                    <td>
-                        <font color="blue">IOT1702</font>
-                    </td>
-                    <td>
-                        <font color="#33CCFF">HE160668</font>
-                    </td>
-                    <td>
-                        <font color="blue">Trần Quý Đạt</font>
-                    </td>
-                    <td>
-                <center>
-                    <img alt="HE160668" src="assets/img/avatarNoName.jpg"
-                         style="height:146px;width:111px;border-width:0px;">
-                </center>
-                </td>
-                <td>
-                    <font color="green">Present</font>
-                </td>
-                <td></td>
-                <td>
-                    <font color="#33CCFF">sonnt5</font>
-                </td>
-                <td>1/19/2022 8:54:00 AM</td>
-                </tr>
-                </tbody>
-            </table>
-        </form>
+                            <font color="green">Present</font>
+                        </td>
+                        <td></td>
+                        <td>
+                            <font color="#33CCFF">sonnt5</font>
+                        </td>
+                        <td>1/19/2022 8:54:00 AM</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>
+                                <font color="blue">IOT1702</font>
+                            </td>
+                            <td>
+                                <font color="#33CCFF">HE160258</font>
+                            </td>
+                            <td>
+                                <font color="blue">Phan Kiến Quốc</font>
+                            </td>
+                            <td>
+                        <center>
+                            <img alt="HE160258" src="assets/img/avatarNoName.jpg"
+                                 style="height:146px;width:111px;border-width:0px;">
+                        </center>
+                        </td>
+                        <td>
+                            <font color="green">Present</font>
+                        </td>
+                        <td></td>
+                        <td>
+                            <font color="#33CCFF">sonnt5</font>
+                        </td>
+                        <td>1/19/2022 8:54:00 AM</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>
+                                <font color="blue">IOT1702</font>
+                            </td>
+                            <td>
+                                <font color="#33CCFF">HE160408</font>
+                            </td>
+                            <td>
+                                <font color="blue">Vũ Minh Quang</font>
+                            </td>
+                            <td>
+                        <center>
+                            <img alt="HE160408" src="assets/img/avatarNoName.jpg"
+                                 style="height:146px;width:111px;border-width:0px;">
+                        </center>
+                        </td>
+                        <td>
+                            <font color="green">Present</font>
+                        </td>
+                        <td></td>
+                        <td>
+                            <font color="#33CCFF">sonnt5</font>
+                        </td>
+                        <td>1/19/2022 8:54:00 AM</td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>
+                                <font color="blue">IOT1702</font>
+                            </td>
+                            <td>
+                                <font color="#33CCFF">HE160633</font>
+                            </td>
+                            <td>
+                                <font color="blue">Ngô Dương Ngọc</font>
+                            </td>
+                            <td>
+                        <center>
+                            <img alt="HE160633" src="assets/img/avatarNoName.jpg"
+                                 style="height:146px;width:111px;border-width:0px;">
+                        </center>
+                        </td>
+                        <td>
+                            <font color="red">Absent</font>
+                        </td>
+                        <td></td>
+                        <td>
+                            <font color="#33CCFF">sonnt5</font>
+                        </td>
+                        <td>1/19/2022 8:54:00 AM</td>
+                        </tr>
+                        <tr>
+                            <td>7</td>
+                            <td>
+                                <font color="blue">IOT1702</font>
+                            </td>
+                            <td>
+                                <font color="#33CCFF">HE160668</font>
+                            </td>
+                            <td>
+                                <font color="blue">Trần Quý Đạt</font>
+                            </td>
+                            <td>
+                        <center>
+                            <img alt="HE160668" src="assets/img/avatarNoName.jpg"
+                                 style="height:146px;width:111px;border-width:0px;">
+                        </center>
+                        </td>
+                        <td>
+                            <font color="green">Present</font>
+                        </td>
+                        <td></td>
+                        <td>
+                            <font color="#33CCFF">sonnt5</font>
+                        </td>
+                        <td>1/19/2022 8:54:00 AM</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </form>
+            </div>
+        </div>
     </body>
 
 </html>
