--- a/MyProject/web/RecordAttendence.html
+++ b/MyProject/web/RecordAttendence.html
@@ -51,7 +51,8 @@
                         </center>
                         </td>
                         <td>
-                            <font color="red">Absent</font>
+                            <input type="radio" checked="checked" name="HE130431" value="Absent"><font color="red">Absent</font>
+                            <input type="radio"  name="HE130431" value="Present"><font color="green">Present</font>
                         </td>
                         <td></td>
                         <td>
@@ -77,8 +78,8 @@
                         </center>
                         </td>
                         <td>
-                            <font color="green">Present</font>
-                        </td>
+                            <input type="radio" checked="checked" name="HE141602" value="Absent"><font color="red">Absent</font>
+                            <input type="radio"  name="HE141602" value="Present"><font color="green">Present</font>                        </td>
                         <td></td>
                         <td>
                             <font color="#33CCFF">sonnt5</font>
@@ -103,8 +104,8 @@
                         </center>
                         </td>
                         <td>
-                            <font color="green">Present</font>
-                        </td>
+                            <input type="radio" checked="checked" name="HE150671" value="Absent"><font color="red">Absent</font>
+                            <input type="radio"  name="HE150671" value="Present"><font color="green">Present</font>                                                </td>
                         <td></td>
                         <td>
                             <font color="#33CCFF">sonnt5</font>
@@ -129,8 +130,8 @@
                         </center>
                         </td>
                         <td>
-                            <font color="green">Present</font>
-                        </td>
+                            <input type="radio" checked="checked" name="HE160258" value="Absent"><font color="red">Absent</font>
+                            <input type="radio"  name="HE160258" value="Present"><font color="green">Present</font>                                                </td>
                         <td></td>
                         <td>
                             <font color="#33CCFF">sonnt5</font>
@@ -155,8 +156,8 @@
                         </center>
                         </td>
                         <td>
-                            <font color="green">Present</font>
-                        </td>
+                            <input type="radio" checked="checked" name="HE160408" value="Absent"><font color="red">Absent</font>
+                            <input type="radio"  name="HE160408" value="Present"><font color="green">Present</font>                                                </td>
                         <td></td>
                         <td>
                             <font color="#33CCFF">sonnt5</font>
@@ -181,8 +182,8 @@
                         </center>
                         </td>
                         <td>
-                            <font color="red">Absent</font>
-                        </td>
+                            <input type="radio" checked="checked" name="HE160633" value="Absent"><font color="red">Absent</font>
+                            <input type="radio"  name="HE160633" value="Present"><font color="green">Present</font>                                                </td>
                         <td></td>
                         <td>
                             <font color="#33CCFF">sonnt5</font>
@@ -207,8 +208,8 @@
                         </center>
                         </td>
                         <td>
-                            <font color="green">Present</font>
-                        </td>
+                            <input type="radio" checked="checked" name="HE160668" value="Absent"><font color="red">Absent</font>
+                            <input type="radio"  name="HE160668" value="Present"><font color="green">Present</font>                                                </td>
                         <td></td>
                         <td>
                             <font color="#33CCFF">sonnt5</font>
@@ -217,6 +218,9 @@
                         </tr>
                         </tbody>
                     </table>
+                    <div class="text-center">
+                        <input type="submit" value="Submit" style="margin: 3% 0">
+                    </div>
                 </form>
             </div>
         </div>
