--- a/MyProject/web/GroupedByDepartment.html
+++ b/MyProject/web/GroupedByDepartment.html
@@ -25,7 +25,6 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                             <tr>
                                 <th>Campus</th>
                                 <th>Term</th>
-                                <th>Department</th>
                                 <th>Course</th>
                                 <th>Group</th>
                             </tr>
@@ -99,178 +98,22 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                                     <table>
                                         <tbody>
                                             <tr>
-                                                <td><a href="">Multimedia
-                                                        Communications</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Artificial
-                                                        Intelligence</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">BLOC</a>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Business
-                                                        Administration</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Computer
-                                                        Science</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td><b>Computing Fundamental</b></td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">English</a>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">English
-                                                        Preparation Course</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Finance</a>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Graduate</a>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Graphic
-                                                        Design</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Information
-                                                        Assurance</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Information
-                                                        Technology Specialization</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Japanese</a>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">LAB</a>
-                                                </td>
-                                            </tr>
-
-                                            <tr>
-                                                <td><a href="">Little
-                                                        UK</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Management</a>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Mathematics</a>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">On the
-                                                        job training</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">OR</a>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Physical
-                                                        Training</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Soft
-                                                        Skill</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Software
-                                                        Engineering</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Start
-                                                        Your Business</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Traditional
-                                                        Instrument</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Vietnamese</a>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </td>
-                                <td>
-                                    <table>
-                                        <tbody>
-                                            <tr>
-                                                <td><b>Data Structures and Algorithms (CSD201)</b></td>
-                                            </tr>
-
-                                            <tr>
-                                                <td><a href="">Advanced
-                                                        Algorithms</a> (CSD301)</td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Introduction
-                                                        to Databases</a> (DBI202)</td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Data
-                                                        warehouse</a> (DBW301)</td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Japanese
-                                                        IT Fundamentals</a> (JFE301)</td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Computer
-                                                        Networking</a> (NWC203c)</td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Operating
-                                                        Systems</a> (OSG202)</td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Programming
-                                                        Fundamentals with Python</a> (PFP191)</td>
-                                            </tr>
-                                            <tr>
                                                 <td><a href="">Programming
                                                         Fundamentals</a> (PRF192)</td>
                                             </tr>
                                             <tr>
-                                                <td><a href="">Java
-                                                        Web Application Development</a> (PRJ301)</td>
-                                            </tr>
-
-                                            <tr>
-                                                <td><a href="">Basic
-                                                        Cross-Platform Application Programming With
-                                                        .NET</a> (PRN211)</td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Advanced
-                                                        Cross-Platform Application Programming With
-                                                        .NET</a> (PRN221)</td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">Object-Oriented
-                                                        Programming</a> (PRO192)</td>
+                                                <td><b>Introduction
+                                                        to Databases</b> (DBI202)</td>
                                             </tr>
                                             <tr>
                                                 <td><a href="">C#
                                                         Programming and Unity</a> (PRU211m)</td>
                                             </tr>
                                             <tr>
-                                                <td><a href="">Web
-                                                        Design</a> (WED201c)</td>
+                                                <td><a href="">Capstone Project</a> (SWP490)</td>
                                             </tr>
+
+
                                         </tbody>
                                     </table>
                                 </td>
@@ -279,24 +122,6 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                                         <tbody>
                                             <tr>
                                                 <td><b>AI1604</b></td>
-                                                <td><a href="">AI1605</a></td>
-                                                <td><a href="">IS1602</a></td>
-                                                <td><a href="">SE1623</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">SE1624</a></td>
-                                                <td><a href="">SE1625</a></td>
-                                                <td><a href="">SE1626</a></td>
-                                                <td><a href="">SE1628</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">SE1629</a></td>
-                                                <td><a href="">SE1630</a></td>
-                                                <td><a href="">SE1631</a></td>
-                                                <td><a href="">SE1632</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td><a href="">SE1633</a></td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -310,13 +135,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                     <h2>... then see student list (<a href="">Export data</a>)</h2>
                     <thead>
                         <tr>
-                            <th>Index</th>
-                            <th>Image</th>
-                            <th>Member</th>
-                            <th>Code</th>
-                            <th>Surname</th>
-                            <th>Middle name</th>
-                            <th>Given name</th>
+                            <th>Slot <br> Student</th>
+                            <th>1</th>
+                            <th>2</th>
+                            <th>3</th>
+                            <th>4</th>
+                            <th>5</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
