--- a/MyProject/web/GroupedByDepartment.html
+++ b/MyProject/web/GroupedByDepartment.html
@@ -135,13 +135,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                     <h2>... then see student list (<a href="">Export data</a>)</h2>
                     <thead>
                         <tr>
-                            <th>Slot <br> Student</th>
-                            <th>1</th>
-                            <th>2</th>
-                            <th>3</th>
-                            <th>4</th>
-                            <th>5</th>
-                            <th></th>
+                            <th>Student</th>
+                            <th>Image</th>
+                            <th>Member</th>
+                            <th>Code</th>
+                            <th>Surname</th>
+                            <th>Middle name</th>
+                            <th>Given name</th>
                         </tr>
                     </thead>
                     <tbody>
